WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80624
[chromium] Using wrong scissor rect for draw culling
https://bugs.webkit.org/show_bug.cgi?id=80624
Summary
[chromium] Using wrong scissor rect for draw culling
Dana Jansens
Reported
2012-03-08 12:02:40 PST
[chromium] Using wrong scissor rect for draw culling
Attachments
Patch
(1.66 KB, patch)
2012-03-08 12:07 PST
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dana Jansens
Comment 1
2012-03-08 12:07:54 PST
Created
attachment 130870
[details]
Patch
Adrienne Walker
Comment 2
2012-03-08 13:03:28 PST
Comment on
attachment 130870
[details]
Patch Ah, right. We need to consider damage external to that surface when considering scissoring, what needs to be drawn, and what can be occluded.
WebKit Review Bot
Comment 3
2012-03-08 18:50:21 PST
Comment on
attachment 130870
[details]
Patch Clearing flags on attachment: 130870 Committed
r110247
: <
http://trac.webkit.org/changeset/110247
>
WebKit Review Bot
Comment 4
2012-03-08 18:50:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug