[chromium] Using wrong scissor rect for draw culling https://bugs.webkit.org/show_bug.cgi?id=80624

Patch by Dana Jansens <danakj@chromium.org> on 2012-03-08
Reviewed by Adrienne Walker.

* platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:
(WebCore::CCLayerTreeHostImpl::optimizeRenderPasses):

Canonical link: https://commits.webkit.org/97843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110247 268f45cc-cd09-0410-ab3c-d52691b4dbfc